# diff-ml-rand-svd

./: .gitattributes  .gitignore  CITATION.bib  CITATION.cff  LICENSE  Makefile  README.md  black_scholes.ipynb  eqx.ipynb  eqx_bachelier.ipynb  eqx_first_order.ipynb  eqx_with_differential.ipynb  experiment.ipynb  pca_examples.ipynb  pyproject.toml  tf_bachelier.ipynb  tf_bs.ipynb
.github/workflows/: ubuntu.yml
case_studies/bachelier/: bachelier.py
datasets/bachelier/: bachelier-test.tfrecord-00000  bachelier-train.tfrecord-00000  dataset_info.json  features.json
diff_ml/: __about__.py  __init__.py  _ad.py  ad.py  data.py  hvp_stuff.py  hvps_and_cfd.py  plotting.py  smoothing.py  typing.py
diff_ml/losses/: __init__.py  regression.py
diff_ml/model/: __init__.py  bachelier.py  payoff.py
diff_ml/nn/: __init__.py  loss.py  losses.py  modules.py  train.py  utils.py
eqx/: eqx_bachelier.ipynb  eqx_black_scholes.ipynb  eqx_bs_with_autodiff_samples.ipynb  eqx_first_order.ipynb  eqx_heston.ipynb  eqx_with_differential.ipynb  experiment.ipynb  heston_analytical.ipynb  heston_vibrato.ipynb  requirements.txt  test_heston.ipynb
examples/bachelier/: bachelier.py  bachelier_second_order.py
flax/: flax_black_scholes.ipynb
misc/: pca_examples.ipynb
notebooks/: bachelier_relu_dml.ipynb  bachelier_silu_dml.ipynb  bachelier_smoothed_relu_dml.ipynb  bachelier_softplus.ipynb  bachelier_wide_smoothing.ipynb  comparisons.ipynb  experiments.ipynb  heston_basket.ipynb  heston_basket_experiments.ipynb  heston_closed_form.ipynb  heston_simplified.ipynb  testing.ipynb
notebooks/eqx/: eqx.ipynb  heston_soa.ipynb
notebooks/pruning/: README.md
notebooks/results/data/validation/: bachelier_deltas.npy  bachelier_gammas.npy  bachelier_xs.npy  bachelier_ys.npy
notebooks/results/models/: bachelier_pruned_model_120.onnx  bachelier_pruned_model_125_retrained.onnx  bachelier_vmap_model_dml.onnx  bachelier_vmap_model_ml.onnx
tests/: requirements.txt  test_bachelier.py  test_basic.py  test_train.py
tf/: requirements.txt  tf_bachelier.ipynb  tf_bs.ipynb
