[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diff-ml"
dynamic = ["version"]
description = "Differential Machine Learning for Jax"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
keywords = [
    "jax",
    "differential-machine-learning",
    "neural-networks",
]
authors = [
  { name = "Neil Kichler", email = "neil.kichler@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "equinox>=0.10.5",
    "jaxtyping>=0.2.20",
    "polars>=0.18.8",
    "optax>=0.1.7"
]

[project.urls]
Repository = "https://github.com/neilkichler/diff-ml"

[tool.hatch.version]
path = "diff_ml/__about__.py"

[tool.hatch.build]
include = ["diff_ml/*"]

[tool.hatch.envs.examples]
dependencies = [
  "beartype",
  "matplotlib>=3.7.1",
]

[tool.hatch.envs.test]
dependencies = [
  "beartype",
  "coverage[toml]>=6.5",
  "pytest",
  "tensorflow",
  "tensorflow-datasets",
  "datasets>=2.14.1",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=diff_ml,equinox,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 88
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
  "A",
  "ARG",
  "B",
  "C",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "D100",
  # Ignore missing docstring warning for now
  "D103",
  # Ignore spurious errors in type annotations using strings
  "F722",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.extend-per-file-ignores]
"tests/**/*" = ["D", "F401"]

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["diff_ml", "tests"]

[tool.ruff.isort]
known-first-party = ["diff-ml"]
# combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["diff_ml", "tests"]
branch = true
parallel = true
omit = [
  "diff_ml/__about__.py",
]

[tool.coverage.paths]
diff_ml = ["diff_ml", "*/diff-ml/diff_ml"]
tests = ["tests", "*/diff-ml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

